Dark mode fixes

--- a/styles/global.css
+++ b/styles/global.css
@@ -64,7 +64,7 @@
         @apply bg-blue-100 dark:bg-gray-700 transition !important;
     }
     .orange-block-link {
-        @apply flex w-max items-center text-gray-500 dark:text-white hover:bg-orange-lightest hover:text-navy-darkest dark:hover:bg-navy-dark rounded -mx-1 -my-0.5 px-1 py-0.5 hover:no-underline focus:outline-none focus:ring focus:ring-orange;
+        @apply flex w-max items-center text-gray-500 dark:text-gray-300 dark:hover:text-white hover:bg-orange-lightest hover:text-navy-darkest dark:hover:bg-navy-dark rounded -mx-1 -my-0.5 px-1 py-0.5 hover:no-underline focus:outline-none focus:ring focus:ring-orange;
     }
 }
 
